--- a/web/package.json
+++ b/web/package.json
@@ -1,40 +1,41 @@
 {
-	"name": "50hard",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"watch": "ng build --watch --configuration development",
-		"test": "ng test"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "^17.3.0",
-		"@angular/common": "^17.3.0",
-		"@angular/compiler": "^17.3.0",
-		"@angular/core": "^17.3.0",
-		"@angular/forms": "^17.3.0",
-		"@angular/platform-browser": "^17.3.0",
-		"@angular/platform-browser-dynamic": "^17.3.0",
-		"@angular/router": "^17.3.0",
-		"date-fns": "^3.6.0",
-		"rxjs": "~7.8.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.14.3"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.3.3",
-		"@angular/cli": "^17.3.3",
-		"@angular/compiler-cli": "^17.3.0",
-		"@types/jasmine": "~5.1.0",
-		"jasmine-core": "~5.1.0",
-		"karma": "~6.4.0",
-		"karma-chrome-launcher": "~3.2.0",
-		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
-		"tailwindcss": "^3.4.4",
-		"typescript": "~5.4.2"
-	}
+  "name": "75Hard",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "date-fns": "^3.6.0",
+    "rxjs": "~7.8.1",
+    "tailwind-merge": "^2.4.0",
+    "tslib": "^2.6.3",
+    "zone.js": "~0.14.8"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.12",
+    "@types/jasmine": "~5.1.4",
+    "jasmine-core": "~5.1.2",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.7",
+    "typescript": "~5.4.5"
+  }
 }
